update to gradle 8 for java 20