@@ -3,10 +3,10 @@ plugins {
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
 //    id 'org.hibernate.orm' version '6.1.7.Final'
-    id 'org.graalvm.buildtools.native' version '0.9.20'
+//    id 'org.graalvm.buildtools.native' version '0.9.20'
 }
 
-sourceCompatibility = '17'
+sourceCompatibility = '20'
 
 configurations {
     compileOnly {
@@ -39,6 +39,10 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
 }
 
 //hibernate {
